Set the LayerTreeHost background color after updating the DocumentLifecycle, not before.

This way any changes to the background during that update
will apply to the background passed to the LayerTreeHost.

Bug: 727046
Change-Id: I5c2d080ffdbe52bb3d23a8bd99feb92eab1ade8a
Reviewed-on: https://chromium-review.googlesource.com/528543
Reviewed-by: Walter Korman <wkorman@chromium.org>
Commit-Queue: Chris harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478210}
Former-commit-id: e76d87acc9a55f551ddab222b5f8f656eee63042